<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="we_are_cooking_it_for_you">We Are Cooking it For You</string>
    <string name="welcome_customer">Welcome Customer</string>
    <string name="what_s_on_your_mind">What\'s On Your Mind</string>
    <string name="textview">TextView</string>
    <string name="icon">icon</string>
    <string name="add">+ Add</string>
    <string name="price">$$</string>
    <string name="title">Title</string>
    <string name="scroll">scroll</string>
    <string name="imgel">imgel</string>
    <string name="number" />
    <string name="num">1</string>
    <string name="addpop">+ Add</string>
    <string name="ll">ll</string>
    <string name="description" />
    <string name="descriptionitem" />
    <string name="validate_the_orde">Validate The Orde</string>
    <string name="delete_the_order">Delete The Order</string>
    <string name="shipping_fees">Shipping Fees :</string>
    <string name="total_order">Total Order :</string>
    <string name="total_order_sc">Total Order :</string>
    <string name="shopping_card">Shopping Card</string>
    <string name="title_ordered">Title_Ordered</string>
    <string name="price_ord">Price_Ord</string>
    <string name="quantity">Quantity</string>
    <string name="itemordered">itemordered</string>
    <string name="validate_the_order">Validate The Order</string>
    <string name="shipping_fees_">Shipping Fees 25 Dh</string>
    <string name="total">25 Dh</string>
    <string name="sh">25 Dh</string>
    <string name="tota">25 Dh</string>
    <string name="plus">plus</string>
    <string name="main_page">Main Page</string>
    <string name="your_order_is_on_the_way">Your Order Is On The Way</string>
    <string name="hour">hour</string>
    <string name="your_order_is_on_the_way__">Your Order Is On The Way . . .</string>
    <string name="thank_you_for_trusting_us">Thank You For Trusting Us</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gg">gg</string>
    <string name="ggg" />
    <string name="your_web_client_id">id</string>
    <string name="t1">Type your Email</string>
    <string name="t2">Type Your Password</string>
    <string name="t3">Retype Your Password</string>
    <string name="t4">Sign Up</string>
    <string name="t5">Already Registered , Sign In !</string>
    <string name="t6">Sign In</string>
    <string name="t7">Not Registered Yet , Sign Up !</string>
    <string name="t8">Type Your FullName</string>
</resources>