<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".DetailsPage">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/scroll">

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titletxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="#ff5e80"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgelem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:contentDescription="@string/imgel"
            app:srcCompat="@drawable/tajine__1_" />

        <LinearLayout
            android:id="@+id/pricetxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/minim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="minus"

                app:srcCompat="@drawable/minus" />

            <TextView
                android:id="@+id/numorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:text="@string/num"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/plusim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="plus"
                app:srcCompat="@drawable/plus" />
        </LinearLayout>

        <TextView
            android:id="@+id/descriptionFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/addtocart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/order"
        android:elevation="3dp"
        android:gravity="center"
        android:text="Add To Cart"
        android:textColor="@color/black"
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>