<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="240dp"
    android:background="@color/black">


    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="240dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        android:layout_marginBottom="714dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="240dp">

            <TextView
                android:id="@+id/nameRes2"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/textview"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/icon"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircleRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.416"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/priceRes2"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:text="@string/textview"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.583" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_margin="16dp"
                android:background="@drawable/addditem"
                android:elevation="3dp"
                android:gravity="center"
                android:text="@string/addpop"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nameRes2"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

